--- a/.github/workflows/jira-to-github-issue.yml
+++ b/.github/workflows/jira-to-github-issue.yml
@@ -1,4 +1,4 @@
-name: Create GitHub Issue from Jira
+name: Create GitHub Issue from Jira via MCP
 
 on:
   repository_dispatch:
@@ -25,11 +25,12 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Create GitHub Issue and Assign to Copilot
+      - name: Create GitHub Issue via MCP and Assign to Copilot
         id: create_issue
         env:
-          GB_TOKEN: ${{ secrets.GB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.GB_TOKEN }}
+          TARGET_REPO_OWNER: ${{ github.event.client_payload.target_owner || 'Karthi-Knackforge' }}
+          TARGET_REPO_NAME: ${{ github.event.client_payload.target_repo || 'cms-project' }}
           JIRA_ISSUE_KEY: ${{ github.event.client_payload.jira_key }}
           JIRA_SUMMARY: ${{ github.event.client_payload.summary }}
           JIRA_DESCRIPTION: ${{ github.event.client_payload.description }}
@@ -37,7 +38,7 @@ jobs:
           JIRA_PRIORITY: ${{ github.event.client_payload.priority }}
           JIRA_ISSUE_TYPE: ${{ github.event.client_payload.issue_type }}
         run: |
-          python scripts/create_issue.py
+          python scripts/create_issue_mcp.py
 
       - name: Job Summary
         if: always()
